lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
spec:
  rules:
  - host: lab3antsiferova.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-frontend
            port:
              number: 443
  tls:
  - hosts:
    - lab3antsiferova.com
    secretName: tls-secret
